<resources>
    <string name="app_name">PinNews</string>
    <string name="todo">TODO</string>
    <string name="welcome"><b>Welcome to PinNews</b></string>
    <string name="full_name">Your Name</string>
    <string name="password">Password</string>
    <string name="or_login_with">OR</string>
    <string name="button">Already Registered?</string>
    <string name="gender">Gender:</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="email_address">Email Address</string>
    <string name="terms">By continuing, you agree to PinNew\'s <b>Terms of Service</b> and <b>Privacy Policy.</b></string>
    <string name="facebookAppId">1962388467397552</string>
    <string name="title_activity_bottom_navigation">BottomNavigation</string>
    <string name="title_home">Home</string>
    <string name="title_notifications">Notifications</string>
    <string name="welcome_to_pinnews">Welcome to PinNews</string>
    <string name="pick_2_or_more_topics">Pick 2 or more topics</string>
    <string name="next">Next</string>
    <string name="select_sub_category">Select Sub Category</string>
    <string name="done">Done</string>
    <string name="title">title</string>
    <string name="swap_news">Change Channel…</string>
    <string name="pinnews">PinNews</string>
    <string name="log_in">Log In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="cont">Continue</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string name="continue_with_gmail">Continue with Gmail</string>
    <string name="set_your_profile_picture">Set your Profile Picture</string>
    <string name="skip">Skip</string>
    <string name="choose_image">Choose Image</string>
    <string name="sign_up">Sign Up</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="submit">Submit</string>
    <string name="edit_category">Edit Category</string>
    <string name="edit_date_of_birth">Edit Date of Birth</string>
    <string name="date">Date</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="edit_profile_picture">Edit Profile Picture</string>
    <string name="edit_gender">Edit Gender</string>
    <string name="edit_location">Edit Location</string>
    <string name="edit_name">Edit Name</string>
    <string name="change_password">Change Password</string>
    <string name="re_write_password">Re-write Password</string>
    <string name="edit_phone_number">Edit Phone Number</string>
    <string name="username">Username</string>
    <string name="edit_your_profile">Edit your Profile</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="name">Name</string>
    <string name="location">Location</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="dob">DOB</string>
    <string name="gend">Gender</string>
    <string name="phone_no">Phone No.</string>
    <string name="saved_news">Saved News</string>
    <string name="title_not_available">Title not Available</string>
    <string name="content_not_available">Content not Available!!!</string>
    <string name="_5_likes">1</string>
    <string name="_5_shares">1</string>
    <string name="trending">Trending</string>
    <string name="profile">Profile</string>
    <string name="enter_verification_code">Enter Verification Code</string>
    <string name="verify">Verify</string>
    <string name="no_title_available">No Title Available</string>
    <string name="no_content_available">No Content Avaiable</string>
    <string name="_0_views">0 views</string>
    <string name="about_us">About Us</string>
    <string name="fahad_name">M.Fahad Manzoor</string>
    <string name="sohaib_ahmed">Sohaib Ahmed</string>
    <string name="talha">Talha</string>
    <string name="bs_cs_hons">BS-CS (Hons)</string>
    <string name="fahad_email">itsfahadmughal@gmail.com</string>
    <string name="skills">-> Android \n-> Java \n-> php \n-> Sql \n-> C# \n-> C++</string>
    <string name="sohaib_email">sohaibmughal93@gmail.com</string>
    <string name="talhasahi86_gmail_com">talhasahi86@gmail.com</string>
    <string name="app_developers">App Developers</string>
    <string name="app_manager">App Manager</string>
    <string name="zuhaib_bajwa">Zuhaib Bajwa</string>
    <string name="zuhaib_email">zuhaib.imtiaz@uogsialkot.edu.pk</string>
</resources>
