<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
xmlns:app="http://schemas.android.com/apk/res-auto"
tools:context=".forget_password">

<ImageButton
    android:id="@+id/back_forget_password"
    android:layout_width="40dp"
    android:layout_height="40dp"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="10dp"
    android:background="@null"
    android:clickable="true"
    android:focusable="true"
    app:srcCompat="@drawable/back_profile_edit"
    android:contentDescription="@string/todo"
    android:layout_marginStart="5dp" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginLeft="50dp"
    android:layout_marginRight="50dp"
    android:layout_marginTop="20dp"
    android:text="@string/change_password"
    android:textColor="@color/black"
    android:textSize="18sp"
    android:textStyle="bold" />

<Button
    android:id="@+id/done_forget_password"
    android:layout_width="70dp"
    android:layout_height="40dp"
    android:textStyle="bold"
    android:text="@string/done"
    android:textSize="16sp"
    android:textColor="@color/white"
    android:background="@drawable/style_button"
    android:layout_marginTop="15dp"
    android:layout_marginLeft="280dp"
    android:layout_marginRight="280dp"
    android:onClick="confirmInput6"
    />

<View
    android:layout_width="340dp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="60dp"
    android:layout_height="1dp"
    android:background="#DCDCDC"/>

<EditText
    android:id="@+id/pass1_forget_password"
    android:layout_width="320dp"
    android:layout_height="40dp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="100dp"
    android:hint="@string/password"
    android:inputType="textPassword"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:textColor="@color/black"
    tools:ignore="Autofill" />

<EditText
    android:id="@+id/pass2_forget_password"
    android:layout_width="320dp"
    android:layout_height="40dp"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="145dp"
    android:hint="@string/re_write_password"
    android:inputType="textPassword"
    android:paddingRight="10dp"
    android:paddingLeft="10dp"
    android:textColor="@color/black"
    tools:ignore="Autofill" />

<com.github.ybq.android.spinkit.SpinKitView
    android:id="@+id/spin_kit_forget_password"
    style="@style/SpinKitView.Large.FadingCircle"
    android:layout_width="60dp"
    android:layout_height="60dp"
    android:layout_gravity="center"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    app:SpinKit_Color="@color/red" />


</RelativeLayout>