<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp1">

    <ImageButton
        android:id="@+id/back_Signup1"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="20dp"
        android:background="@null"
        app:srcCompat="@drawable/back_profile_edit"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:text="@string/set_your_profile_picture"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv2_Signup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="30dp"
        android:text="@string/skip"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        android:clickable="true"
        android:focusable="true"
        android:onClick="skip"
        android:layout_marginStart="300dp" />

    <View
        android:layout_width="340dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_height="1dp"
        android:background="#DCDCDC"/>

    <ImageView
        android:id="@+id/dp_Signup1"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="120dp"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/profile"
        android:contentDescription="@string/todo" />

    <Button
        android:id="@+id/upload_Signup1"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="330dp"
        android:background="@drawable/style_button"
        android:text="@string/choose_image"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/next_Signup1"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="520dp"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:layout_centerHorizontal="true"
        android:background="@drawable/style_button"
        android:text="@string/next" />

</RelativeLayout>