<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/back_Filtering_Category"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        android:clickable="true"
        android:contentDescription="@string/todo"
        android:focusable="true"
        app:srcCompat="@drawable/back_profile_edit"
        android:layout_marginStart="5dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/select_sub_category"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/done_Filtering_Category"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:textStyle="bold"
        android:text="@string/done"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@drawable/style_button"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="270dp"
        android:layout_marginRight="270dp"
        />

    <View
        android:layout_width="340dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_height="1dp"
        android:background="#DCDCDC"/>


    <ExpandableListView
        android:id="@+id/lvCategory"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="61dp"
        android:childDivider="@color/black"
        android:divider="@null"
        android:dividerHeight="2dp" />

</RelativeLayout>