<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageButton
        android:id="@+id/back_Edit_name"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginTop="10dp"
        android:background="@null"
        app:srcCompat="@drawable/back_profile_edit"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/edit_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/done_Edit_name"
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:textStyle="bold"
        android:text="@string/done"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:background="@drawable/style_button"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="280dp"
        android:layout_marginRight="280dp"
        />

    <View
        android:layout_width="340dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:layout_height="1dp"
        android:background="#DCDCDC"/>

    <EditText
        android:id="@+id/name_Edit_name"
        android:layout_width="320dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:layout_centerHorizontal="true"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/black"
        android:inputType="textCapWords"
        tools:ignore="Autofill,LabelFor" />

    <com.github.ybq.android.spinkit.SpinKitView
        android:id="@+id/spin_kit_edit_name"
        style="@style/SpinKitView.Large.FadingCircle"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        app:SpinKit_Color="@color/red" />


</RelativeLayout>